<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/course_activity_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:text="@string/course_activity_created_title"
        android:layout_below="@+id/course_activity_name"
        android:id="@+id/course_activity_created_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:layout_below="@+id/course_activity_name"
        android:layout_toRightOf="@+id/course_activity_created_title"
        android:id="@+id/course_activity_created" />

    <TextView
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:text="@string/course_activity_par_title"
        android:layout_below="@+id/course_activity_created_title"
        android:id="@+id/course_activity_par_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:layout_below="@+id/course_activity_created_title"
        android:layout_toRightOf="@+id/course_activity_par_title"
        android:id="@+id/course_activity_par" />

    <TextView
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:text="@string/course_activity_holes_title"
        android:layout_below="@+id/course_activity_par_title"
        android:id="@+id/course_activity_holes_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        android:layout_below="@+id/course_activity_par_title"
        android:layout_toRightOf="@+id/course_activity_holes_title"
        android:id="@+id/course_activity_holes" />

</RelativeLayout>